link cart and payment page

--- a/cart.html
+++ b/cart.html
@@ -108,7 +108,9 @@
         <img src="https://uidesign.gbtcdn.com/GB/image/other/20190117_7271/Group_45.png" alt="">
     </div>
     <div class="cartBody">
-        <div class="btn">Checkout</div>
+        <div class="btn"><a href="payment.html" style="color: black;
+            background: none;
+            text-decoration: none;">Checkout</a></div>
         <table>
             <thead class="tableHead">
             <tr>
