--- a/productPage.html
+++ b/productPage.html
@@ -61,8 +61,8 @@
         </div>
         <div id="sign">
             <p><span><i class="fa-solid fa-user"></i></span> Sign in</p>
-            <p><span><i class="fa-regular fa-heart"></i></i></span> Favourites</p>
-            <p><span><i class="fa-solid fa-cart-arrow-down"></i></span> Cart</p>
+            <p><span><i class="fa-regular fa-heart"></i></i></span><a href="fav.html">Favourites</a> </p>
+            <p><span><i class="fa-solid fa-cart-arrow-down"></i></span> <a href="cart.html">Cart</a></p>
         </div>
     
     </div>  
@@ -174,8 +174,8 @@
                 <p>In stock</p>
             </div>
             <div class="buttons">
-                <button class="addtocart">Add To Cart</button>
-                <button class="buynow">Buy Now</button>
+                <button class="addtocart"><a href="cart.html">Add To Cart</a></button>
+                <button class="buynow"><a href="payment.html">Buy Now</a></button>
             </div>
             <div class="fav">
                 <p><i class="fa-solid fa-heart"></i> Add to Favorites (1)</p>
