--- a/cart.html
+++ b/cart.html
@@ -184,7 +184,7 @@
         var h2 = document.createElement("h2");
         var spn = document.createElement("span");
         spn.className = "totalvalue";
-        spn.innerText = "Rs." + total;
+        spn.innerText = "$" + total;
         h2.append("Total : ", spn)
         div.append(h2);
         document.querySelector("body").append(div)
