--- a/payment.html
+++ b/payment.html
@@ -241,7 +241,7 @@
                     </div>
                     <div class="payment_method_boxb3p">
                         <div><p>Payable Amount</p></div>
-                        <div class="payment_method_payable"><h5>890</h5></div>
+                        <div class="payment_method_payable"><h5>$890</h5></div>
                     </div>
 
                     <input class="payment_paynow_btn" type="submit" value="PAY NOW"/>
