--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
        <p class="price">$9.99</p>
     </div>
    <div>
-    <div class="gbItem_discount">32% off</div> class="middleImg"
+    <div class="gbItem_discount">32% off</div> 
        <img src="https://gloimg.gbtcdn.com/soa/gb/item/6880475736935952384/16424/goods_thumb_220-v1/94935184646d.jpg" alt="" class="middleImg">
        <p class="strikeprice">RRP: $119.98</p>
        <p class="price">$9.99</p>
